# shush

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: shush.desktop  shush.service
debian/: changelog  control  copyright
scripts/: release.py
shush/: __init__.py  __main__.py  app.py  config.py  dbus_filter.py  desktop_apps.py  models.py  rule_engine.py  scheduler.py  sound_control.py
shush/ui/: about_tab.py  log_tab.py  main_window.py  resources.py  rule_dialog.py  rules_tab.py  schedule_dialog.py  schedule_tab.py  settings_tab.py  theme.py  toggle_switch.py  tray.py
tests/: test_config.py  test_rule_engine.py  test_scheduler.py
